package src.Main.java.observer;


// Interfaccia Observer per il pattern Observer
public interface Observer {
    void update(String msg);
}
